# CRF-Game

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  conanfile.txt
.github/workflows/: build.yml  cmake-multi-platform.yml  test.yml
resource/: icon.icns
resources/: characters.json  rooms.json
src/: Components.hpp  Main.cpp
src/interfaces/: IExecutes.hpp
src/lib/: FloydWarshal.cpp  FloydWarshal.h  FloydWarshal.hpp  QuadTree.cpp  QuadTree.hpp  Renderer.cpp  Renderer.hpp
test/: Test.cpp
test/fixtures/: characters.json  rooms.json
test/lib/: FloydWarshalTest.cpp  QuadTreeTest.cpp  RendererTest.cpp
